--- a/projects/Web-Pages/Survey-Form-Page/index.html
+++ b/projects/Web-Pages/Survey-Form-Page/index.html
@@ -20,100 +20,103 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
   </head>
 
-  <div id=nav></div>
-  <div id="preamble">
-    <h1 id="title">How good are you at HTML and CSS?</h1>
-    <p id="description">This survey will ask you questions on how comfortable you are at HTML and CSS.</p>
-  </div>
+  <div id="nav"></div>
+  <div id="root" class="container-fluid">
+    <div id="preamble" class="container">
+        <h1 id="title">How good are you at HTML and CSS?</h1>
+        <p id="description">This survey will ask you questions on how comfortable you are at HTML and CSS.</p>
+    </div>
 
-  <div id="form-container">
-
-    <div id="form-content">
-      <form id="survey-form"  action="index.html" method="GET">
-
-        <div class="row">
-          <div class="question">
-            <label id="name-label" for="name">Please enter your name</label>
-          </div>
-          <div class="right-row">
-            <input id="name" type="text" name="name" placeholder="Enter your name" required/>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="question">
-            <label id="email-label" for="email">Please enter your name</label>
-          </div>
-          <div class="right-row">
-            <input id="email" type="email" name="email" placeholder="Enter your email" required/>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="question">
-            <label id="number-label" for="number">How old are you?</label>
-          </div>
-          <div class="right-row">
-            <input id="number"  type="number" name="number" placeholder="Enter your age" min="1" max="125" required/>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="question">
-            <label id="dropdown-label" for="dropdown">On a scale of 1 to 5 how good are you at HTML and CSS?</label>
-          </div>
-          <div class="right-row">
-            <select id="dropdown" class="dropdown" name="skill">
-              <option disabled value> Select a number </option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
-          </div>
-        </div>
+    <div id="form-container" class="container">
+      <div id="form-content" class="container">
+        <form id="survey-form"  action="index.html" method="GET">
 
           <div class="row">
             <div class="question">
-              <label id="comfort-label" for="comfort">Are you more comfortable with HTML or CSS?</label>
+              <label id="name-label" for="name">Please enter your name</label>
             </div>
-            <div class="right-column">
-                <label><input type="radio" name="comfort" value="1">HTML</label>
-                <label><input type="radio" name="comfort" value="2">>CSS</label>
-                <label><input type="radio" name="comfort" value="3">>neither</label>
+            <div class="right-col">
+              <input id="name" class="input-box" type="text" name="name" placeholder="Enter your name" required/>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="question">
+              <label id="email-label" for="email">Please enter your name</label>
+            </div>
+            <div class="right-col">
+              <input id="email" class="input-box" type="email" name="email" placeholder="Enter your email" required/>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="question">
+              <label id="number-label" for="number">How old are you?</label>
+            </div>
+            <div class="right-col">
+              <input id="number" class="input-box" type="number" name="number" placeholder="Age" min="1" max="125" required/>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="question">
+              <label id="dropdown-label" for="dropdown">On a scale of 1 to 5 how good are you at HTML and CSS?</label>
+            </div>
+            <div class="right-col">
+              <select id="dropdown" class="dropdown input-box" name="skill">
+                <option disabled value> Select a number </option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
             </div>
           </div>
 
             <div class="row">
               <div class="question">
-                <label id="learn-label" for="learn">Where did you learn HTML and/or CSS? (check all that apply)</label>
+                <label id="comfort-label" for="comfort">Are you more comfortable with HTML or CSS?</label>
               </div>
-              <div class="right-column">
-                <ul id="learn-table">
-                  <li><label><input type="checkbox" name="learn" value="1">Online</label></li>
-                  <li><label><input type="checkbox" name="learn" value="2">Schoool</label></li>
-                  <li><label><input type="checkbox" name="learn" value="3">Workshops</label></li>
-                  <li><label><input type="checkbox" name="learn" value="4">Friends</label></li>
-                  <li><label><input type="checkbox" name="learn" value="5">Books</Label></li>
-                  <li><label><input type="checkbox" name="learn" value="6">Elsewhere</Label></li>
+              <div class="right-col">
+                <ul id="comfort-table" class="form-table">
+                  <li><label><input type="radio" name="comfort" value="1">HTML</label></li>
+                  <li><label><input type="radio" name="comfort" value="2">CSS</label></li>
+                  <li><label><input type="radio" name="comfort" value="3">neither</label></li>
                 </ul>
               </div>
             </div>
 
-            <div class="column">
-              <div class="questions">
-                <label id="comments-label" for="comments">Additonal Comments:</label>
+              <div class="row">
+                <div class="question">
+                  <label id="learn-label" for="learn">Where did you learn HTML and/or CSS? (check all that apply)</label>
+                </div>
+                <div class="right-col">
+                  <ul id="learn-table" class="form-table">
+                    <li><label><input type="checkbox" name="learn" value="1">Online</label></li>
+                    <li><label><input type="checkbox" name="learn" value="2">Schoool</label></li>
+                    <li><label><input type="checkbox" name="learn" value="3">Workshops</label></li>
+                    <li><label><input type="checkbox" name="learn" value="4">Friends</label></li>
+                    <li><label><input type="checkbox" name="learn" value="5">Books</Label></li>
+                    <li><label><input type="checkbox" name="learn" value="6">Elsewhere</Label></li>
+                  </ul>
+                </div>
               </div>
-              <div>
-                <textarea id="comments" name="comments" rows="8" cols="80" placeholder="Enter your comments here..."></textarea>
-              </div>
-            </div>
 
-            <div id="submit-button">
-              <button id="submit" type="submit" name="submit">Submit</button>
-            </div>
-      </form>
+              <div class="row">
+                <div class="questions">
+                  <label id="comments-label" for="comments">Additonal Comments:</label>
+                </div>
+                <div>
+                  <textarea id="comments" name="comments" rows="8" cols="80" placeholder="Enter your comments here..."></textarea>
+                </div>
+              </div>
+
+              <div id="submit-button">
+                <button id="submit" type="submit" name="submit">Submit</button>
+              </div>
+        </form>
+      </div>
     </div>
   </div>
 
