--- a/projects/Web-Pages/Technical-Documentation-Page/index.html
+++ b/projects/Web-Pages/Technical-Documentation-Page/index.html
@@ -22,6 +22,7 @@
 
     <div id=nav></div>
     <body>
+    <div id="root">
       <div id="page-container">
         <div id="navi">
           <nav id="navbar">
@@ -126,7 +127,8 @@
           </main>
         </div>
       </div>
-    </body>
+    </div>
+  </body>
 
     <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"> </script>
 </html>
