--- a/projects/Web-Pages/Tribute-Page/index.html
+++ b/projects/Web-Pages/Tribute-Page/index.html
@@ -20,46 +20,48 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
   </head>
   <div id=nav></div>
-  <div id="main">
-      <div id="heading">
-        <h1 id="title">Hideo Kojima</h1>
-        <div>Man who shook the Gaming Industry</div>
-      </div>
-      <div id="img-div">
-        <figure>
-          <img id="image" src="https://i.pinimg.com/originals/00/70/f1/0070f1993d5fe4859dcb19326eb9637b.jpg" class="rounded-image"alt="">
-          <br>
-          <div id="img-caption">
-            <figcaption>Kojima (second on the left) with fellow game developers</figcaption>
-          </div>
-        </figure>
-      </div>
-      <div id="tribute-info">
-        <ul>
-          <h2 id="notable-games">Notable-games</h2>
-          <li>
-            <figure class="game-image">
-              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/21/Death_Stranding.png/220px-Death_Stranding.png" class="rounded-image" alt="">
-              <br>
-              <figcaption><strong>Upcoming:</strong> Death Stranding</figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="game-image">
-              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Sh3_boxart.jpg/220px-Sh3_boxart.jpg" class="rounded-image" alt="">
-              <br>
-              <figcaption><strong>1999-2014:</strong> Silent Hill Series</figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="game-image">
-              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/07/MGSV_Ground_Zeroes_boxart.jpg/220px-MGSV_Ground_Zeroes_boxart.jpg" class="rounded-image" alt="">
-              <br>
-              <figcaption><strong>1987-present</strong> Metal Gear Series</figcaption>
-            </figure>
-          </li>
-        </ul>
-        <h3>To read more about Hideo Kojima, visit his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Hideo_Kojima" target="_blank">wikipedia page<a>.<h3>
+  <div id="root">
+    <div id="main">
+        <div id="heading">
+          <h1 id="title">Hideo Kojima</h1>
+          <div>Man who shook the Gaming Industry</div>
+        </div>
+        <div id="img-div">
+          <figure>
+            <img id="image" src="https://i.pinimg.com/originals/00/70/f1/0070f1993d5fe4859dcb19326eb9637b.jpg" class="rounded-image"alt="">
+            <br>
+            <div id="img-caption">
+              <figcaption>Kojima (second on the left) with fellow game developers</figcaption>
+            </div>
+          </figure>
+        </div>
+        <div id="tribute-info">
+          <ul>
+            <h2 id="notable-games">Notable-games</h2>
+            <li>
+              <figure class="game-image">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/21/Death_Stranding.png/220px-Death_Stranding.png" class="rounded-image" alt="">
+                <br>
+                <figcaption><strong>Upcoming:</strong> Death Stranding</figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure class="game-image">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Sh3_boxart.jpg/220px-Sh3_boxart.jpg" class="rounded-image" alt="">
+                <br>
+                <figcaption><strong>1999-2014:</strong> Silent Hill Series</figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure class="game-image">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/07/MGSV_Ground_Zeroes_boxart.jpg/220px-MGSV_Ground_Zeroes_boxart.jpg" class="rounded-image" alt="">
+                <br>
+                <figcaption><strong>1987-present</strong> Metal Gear Series</figcaption>
+              </figure>
+            </li>
+          </ul>
+          <h3>To read more about Hideo Kojima, visit his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Hideo_Kojima" target="_blank">wikipedia page<a>.<h3>
+        </div>
       </div>
     </div>
     <script type="text/babel" src="https://s3.ca-central-1.amazonaws.com/haydenyap.com/scripts/nav.js"> </script>
